# payments-engine

./: Cargo.toml  README.md
src/: account.rs  csv_reader.rs  lib.rs  main.rs  transaction_processor.rs  transaction_types.rs  transactions_cache.rs
tests/: large_input_test.rs  memory_usage_test.rs
tests/inputs/: test_input_1.csv  test_input_10.csv  test_input_11.csv  test_input_12.csv  test_input_13.csv  test_input_2.csv  test_input_3.csv  test_input_4.csv  test_input_5.csv  test_input_6.csv  test_input_7.csv  test_input_8.csv  test_input_9.csv
