[package]
name = "payments-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
csv = "1.3.1"
lru = "0.16.1"
rocksdb = { version = "0.24.0", optional = true }
rusqlite = "0.37.0"
rust_decimal = { version = "1.38.0", features = ["serde-str"] }
serde = { version = "1.0.228", features = ["derive"] }
sled = { version =  "0.34.7", optional = true }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }